<resources>
    <string name="app_name">Porfírio Travel</string>
    <string name="package_list_specials_header">Especiais</string>
    <string name="package_list_banner_description">Banner inicial dos pacotes</string>
    <string name="package_summary_app_bar_title">Resumo do pacote</string>
    <string name="package_summary_image_description">Imagem da cidade do pacote</string>
    <string name="package_summary_price_label">Preço final</string>
    <string name="package_summary_make_payment_button">Realizar Pagamento</string>
    <string name="package_summary_dates_range">%1$s - %2$s</string>

    <string name="common_day_plural">dias</string>
    <string name="common_day_regular">dia</string>

    <string name="payment_app_bar_title">Pagamento</string>
    <string name="payment_title">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="price_value_label">Purchase amount:</string>
    <string name="credit_card_number_hint">Número do Cartão</string>
    <string name="credit_card_month_expires_hint">MM</string>
    <string name="credit_card_year_expires_hint">AA</string>
    <string name="credit_card_cvc_hint">CVC</string>
    <string name="credit_card_holder_name_hint">Nome no cartão</string>
    <string name="credit_card_holder_name_mask">ABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="payment_make_payment_button">Finalizar compra</string>

    <string name="purchase_summary_header_first_line">Parabéns!</string>
    <string name="purchase_summary_header_second_line">Compra realizada com sucesso :)</string>
    <string name="purchase_summary_text">Check the purchase summary:</string>
    <string name="purchase_summary_app_bar_title">Resumo da Compra</string>
    <string name="unavailable_package">Pacote indisponível</string>
</resources>
