<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/package_summary_image"
        android:layout_width="0dp"
        android:layout_height="140dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        android:contentDescription="@string/package_summary_image_description"
        app:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/package_summary_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        tools:text="São Paulo"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/package_summary_image" />

    <TextView
        android:id="@+id/package_summary_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/package_summary_city"
        app:layout_constraintTop_toBottomOf="@+id/package_summary_city"
        tools:text="2 dias" />

    <TextView
        android:id="@+id/package_summary_dates"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="14sp"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/package_summary_days"
        app:layout_constraintTop_toBottomOf="@+id/package_summary_days"
        tools:text="08/12 - 10/12 de 2020" />

    <TextView
        android:id="@+id/package_summary_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="end"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/package_summary_dates"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        tools:text="R$ 243,99" />

    <TextView
        android:id="@+id/package_summary_price_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/package_summary_price_label"
        app:layout_constraintBottom_toTopOf="@+id/package_summary_price"
        app:layout_constraintEnd_toEndOf="@+id/package_summary_price" />

    <Button
        android:id="@+id/package_summary_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/orange_rounded_button"
        android:text="@string/package_summary_make_payment_button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/package_summary_image"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>